--- a/src/styles/SocialPath.module.css
+++ b/src/styles/SocialPath.module.css
@@ -15,6 +15,7 @@ div.container {
   backdrop-filter: blur(8px);
   gap: 1rem;
   /* box-shadow: 2px 2px 1px 0px rgba(0, 0, 0, 0.05); */
+  z-index: 10;
 
   /* &:hover {
     transform: scale(1.1);
